deployments/kubernetes/overlays/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: py-reminders
spec:
  type: ClusterIP
