deployments/kubernetes/overlays/prod/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: py-reminders
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /py-reminders
        backend:
          serviceName: py-reminders
          servicePort: 8080
